Refactor: components refactoring

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -601,24 +601,16 @@ video {
   position: relative;
 }
 
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
 .top-40 {
   top: 10rem;
 }
 
 .col-span-2 {
   grid-column: span 2 / span 2;
+}
+
+.-m-6 {
+  margin: -1.5rem;
 }
 
 .m-10 {
@@ -637,30 +629,6 @@ video {
   margin: auto;
 }
 
-.m-\[-10p\] {
-  margin: -10p;
-}
-
-.m-\[-10px\] {
-  margin: -10px;
-}
-
-.m-\[-30px\] {
-  margin: -30px;
-}
-
-.m-\[-15px\] {
-  margin: -15px;
-}
-
-.m-\[-20px\] {
-  margin: -20px;
-}
-
-.m-\[-25px\] {
-  margin: -25px;
-}
-
 .mx-5 {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
@@ -669,6 +637,10 @@ video {
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.-ml-7 {
+  margin-left: -1.75rem;
 }
 
 .mb-2 {
@@ -681,6 +653,10 @@ video {
 
 .ml-10 {
   margin-left: 2.5rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .mt-1 {
@@ -699,72 +675,8 @@ video {
   margin-top: 0.75rem;
 }
 
-.mr-\[-30px\] {
-  margin-right: -30px;
-}
-
-.ml-\[-30px\] {
-  margin-left: -30px;
-}
-
-.ml-\[-100px\] {
-  margin-left: -100px;
-}
-
-.ml-\[-200px\] {
-  margin-left: -200px;
-}
-
-.ml-\[-150px\] {
-  margin-left: -150px;
-}
-
-.ml-\[-160px\] {
-  margin-left: -160px;
-}
-
-.ml-\[-180px\] {
-  margin-left: -180px;
-}
-
-.ml-\[-185px\] {
-  margin-left: -185px;
-}
-
-.ml-\[-190px\] {
-  margin-left: -190px;
-}
-
-.ml-\[-191px\] {
-  margin-left: -191px;
-}
-
-.ml-\[-192px\] {
-  margin-left: -192px;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.-ml-5 {
-  margin-left: -1.25rem;
-}
-
-.-ml-10 {
-  margin-left: -2.5rem;
-}
-
 .-ml-6 {
   margin-left: -1.5rem;
-}
-
-.-ml-7 {
-  margin-left: -1.75rem;
 }
 
 .flex {
@@ -785,6 +697,10 @@ video {
 
 .h-20 {
   height: 5rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-6 {
@@ -837,24 +753,16 @@ video {
   height: 100vh;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
-.h-36 {
-  height: 9rem;
-}
-
-.h-28 {
-  height: 7rem;
-}
-
-.h-24 {
-  height: 6rem;
+.h-2\/3 {
+  height: 66.666667%;
 }
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-1\/5 {
@@ -869,8 +777,16 @@ video {
   width: 40%;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-3\/4 {
   width: 75%;
+}
+
+.w-3\/5 {
+  width: 60%;
 }
 
 .w-4 {
@@ -885,32 +801,12 @@ video {
   width: 24rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-\[15px\] {
   width: 15px;
 }
 
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-24 {
-  width: 6rem;
+.w-full {
+  width: 100%;
 }
 
 .table-auto {
@@ -957,10 +853,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .justify-evenly {
   justify-content: space-evenly;
 }
@@ -989,6 +881,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-r-md {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
@@ -996,10 +892,6 @@ video {
 
 .border {
   border-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-t {
@@ -1130,11 +1022,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -1182,19 +1069,6 @@ video {
   line-height: 57px;
 }
 
-.leading-4 {
-  line-height: 1rem;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1203,11 +1077,6 @@ video {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-slate-800 {
@@ -1236,18 +1105,65 @@ video {
 }
 
 .gain {
-  border-bottom-width: 1px;
-  padding: 1rem;
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .loss {
-  border-bottom-width: 1px;
-  padding: 1rem;
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
+
+.table_cell {
+  border-bottom-width: 1px;
+  padding: 1rem;
+}
+
+.cell_hover {
+  cursor: pointer;
+}
+
+.cell_hover:hover {
+  font-weight: 700;
+}
+
+.icon {
+  width: 1rem;
+  cursor: pointer;
+  fill: #475569;
+}
+
+.icon:hover {
+  fill: #1e293b;
+}
+
+.button_page {
+  border-radius: 0.125rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover_button {
+  cursor: pointer;
+}
+
+.hover_button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+.hover_button:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+/* bg-slate-500 text-white font-bold p-2 rounded-md hover:bg-slate-600 disabled:bg-slate-400 */
 
 .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
@@ -1262,10 +1178,6 @@ video {
 .hover\:bg-slate-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
-.hover\:fill-red-500:hover {
-  fill: #ef4444;
 }
 
 .hover\:font-bold:hover {
