--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,30 @@
 @tailwind utilities;
 
 .gain {
-  @apply border-b p-4 text-red-500;
+  @apply text-red-500;
 }
 
 .loss {
-  @apply border-b p-4 text-blue-500;
+  @apply text-blue-500;
 }
+
+.table_cell {
+  @apply border-b p-4;
+}
+
+.cell_hover {
+  @apply cursor-pointer hover:font-bold;
+}
+
+.icon {
+  @apply w-4 cursor-pointer hover:fill-slate-800 fill-slate-600;
+}
+
+.button_page {
+  @apply text-white bg-slate-500 px-3 py-1 rounded-sm;
+}
+
+.hover_button {
+  @apply cursor-pointer hover:bg-slate-600 disabled:bg-slate-400;
+}
+/* bg-slate-500 text-white font-bold p-2 rounded-md hover:bg-slate-600 disabled:bg-slate-400 */
