--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 .gain {
-  @apply text-red-500;
+  @apply text-red-500 font-bold;
 }
 
 .loss {
-  @apply text-blue-500;
+  @apply text-blue-500 font-bold;
 }
 
 .table_cell {
@@ -29,4 +29,11 @@
 .hover_button {
   @apply cursor-pointer hover:bg-slate-600 disabled:bg-slate-400;
 }
-/* bg-slate-500 text-white font-bold p-2 rounded-md hover:bg-slate-600 disabled:bg-slate-400 */
+
+.box_filter {
+  @apply flex w-1/3 justify-between border px-4 py-2 bg-slate-100;
+}
+
+.container_main {
+  @apply my-1 px-5 w-11/12 h-[33.5rem] m-auto;
+}
