--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -621,6 +621,10 @@ video {
   grid-column: span 5 / span 5;
 }
 
+.col-span-7 {
+  grid-column: span 7 / span 7;
+}
+
 .-m-6 {
   margin: -1.5rem;
 }
@@ -708,6 +712,18 @@ video {
   margin-top: 0.75rem;
 }
 
+.mr-10 {
+  margin-right: 2.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
 .flex {
   display: flex;
 }
@@ -782,6 +798,14 @@ video {
   height: 4rem;
 }
 
+.h-2\/3 {
+  height: 66.666667%;
+}
+
+.h-4\/5 {
+  height: 80%;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -852,6 +876,14 @@ video {
 
 .w-12 {
   width: 3rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .table-auto {
@@ -959,6 +991,10 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-r-md {
@@ -1071,12 +1107,33 @@ video {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
 .fill-white {
   fill: #fff;
 }
 
 .fill-slate-500 {
   fill: #64748b;
+}
+
+.fill-slate-600 {
+  fill: #475569;
+}
+
+.fill-blue-500 {
+  fill: #3b82f6;
+}
+
+.fill-slate-400 {
+  fill: #94a3b8;
+}
+
+.fill-slate-700 {
+  fill: #334155;
 }
 
 .p-1 {
@@ -1141,6 +1198,11 @@ video {
 .px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .pb-3 {
@@ -1210,6 +1272,31 @@ video {
   font-size: 12px;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1268,6 +1355,11 @@ video {
 .text-slate-900 {
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
 .shadow-md {
@@ -1391,6 +1483,14 @@ video {
 
 .hover\:fill-slate-600:hover {
   fill: #475569;
+}
+
+.hover\:fill-slate-700:hover {
+  fill: #334155;
+}
+
+.hover\:fill-white:hover {
+  fill: #fff;
 }
 
 .hover\:font-bold:hover {
